# gpt-rag

./: .gitignore  pyproject.toml
src/: main.py
src/models/: Models.py
src/routers/: dependencies.py  internal.py  login.py  users.py
src/services/: chatbot.py
src/setup/: create_users_db.py
src/static/: style.css
src/templates/: base.html  chatbot.html  dashboard.html  login.html  manage_users.html
tests/: test_login.py
